fixed too large menu.svg file

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -96,8 +96,8 @@
 .home .card {
   color: #fff;
   display: flex;
-/*  flex: 1 0 auto; */
-/*  flex-direction: column; */
+  flex: 1 0 auto;
+  flex-direction: column;
   margin: 0.75rem 0 0 0.75rem;
   min-width: 0;
   padding: 1.25rem;
@@ -125,7 +125,7 @@
 }
 
 .home .card h3 {
-/*  font-size: 1.5rem; */
+  /*  font-size: 1.5rem; */
   margin-top: -2.5rem;
   line-height: 2rem;
   padding: 0 0 1rem;
@@ -147,13 +147,13 @@
 
 .home .card .paragraph {
   font-weight: var(--weight-light);
-  margin-top: 0rem;
-/*  flex: 1 0 auto; /* NOTE must specify flex-basis for IE 11 */ */
+  margin-top: 0.1rem;
+  /*  flex: 1 0 auto; */ /* NOTE must specify flex-basis for IE 11 */
 }
 
 .home .card .ulist {
   font-weight: var(--weight-bold);
-/*  margin: 1.5rem 0 0.5rem; */
+  /*  margin: 1.5rem 0 0.5rem; */
   /* overflow-wrap: normal; */
   word-wrap: normal; /* NOTE not sure why this is required, but without it, list items get spaced apart */
 }
